<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="left"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/previous_button"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/previous_button" 
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/START_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/START_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/END_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/END_button" 
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:text="@string/next_button" 
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="518dp"
        android:layout_height="254dp"
        android:padding="24dp"
        android:text="@string/notes_text" 
        android:textColor="@color/white"/>

</LinearLayout>